# cb_slam_task

./: README.md
cb_slam/: CMakeLists.txt  package.xml
cb_slam/launch/: localization_score.launch.py  mapping.launch.py  navigation.launch.py
cb_slam/map/: cb_map.pgm  cb_map.yaml  map.yaml
cb_slam/param/: cb_nav_param.yaml  localization_score_params.yaml
cb_slam/src/: localization_score.cpp
cb_slam/world/: cb_final.world  cb_world.sdf  test.world
cb_slam/world/models/cb_room_model/: model.config  model.sdf
